hphp/hack/test/typecheck/const_attribute/usage/interface.php
<?hh // strict

<<__Const>>
interface Interface {}
